finding criminals app

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <title>JavaScript</title>
 </head>
 <body>
-    <h1>Toto je nadpis</h1>
+    <input id="licence-plate" type="text"
+    placeholder="Poznávacia značka">
+
+    <div id="idCriminal">
+
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
